--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "leaveService"]
 	path = leaveService
-	url = https://github.com/saikumar457LL/leaveService
+	url = git@github.com:saikumar457LL/leaveService.git
 [submodule "authService"]
 	path = authService
-	url = https://github.com/saikumar457LL/authService
+	url = git@github.com:saikumar457LL/authService.git
